plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.6'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.ncookie'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	implementation 'com.auth0:java-jwt:4.2.1'

	// Apple login
	implementation 'com.nimbusds:nimbus-jose-jwt:3.10'
	implementation 'org.bouncycastle:bcpkix-jdk18on:1.72'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'

	//Json
	implementation 'com.googlecode.json-simple:json-simple:1.1.1'

	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.1'

	// DB 관련 설정
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

// Heroku 설정
jar {
	enabled = false
	manifest {
		attributes('Main-Class': 'com.ncookie.imad.ImadServerApplication')
	}
}
